<resources>
    <string name="app_name">MSC(CS)</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">MSc(CS) HKU</string>
    <string name="nav_header_URL">www.msc&#8211;cs.hku.hk</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="program_name">Master of Science in Computer Science, HKU</string>
    <string name="action_settings">Speech</string>
    <string name="program_overview">The MSc(CompSc) programme is a comprehensive postgraduate study programme provides advanced and in&#8211;depth learning in Computer Science. The programme is credit unit based, with courses of both applied and fundamental nature. Students can choose from a comprehensive and diversified study in Computer Science courses or focussed streams of study. Focussed streams of study represent a cohesive collection of related courses that provides both fundamental and in&#8211;depth exposure to students in a given ICT domain.
    </string>
    <string name="f_hku_title">The University of Hong Kong</string>
    <string name="f_hku_details">The University of Hong Kong (HKU), founded in 1911, is the oldest of Hong Kong’s institutions of higher learning.  It was also the alma mater of Dr. Sun Yat&#8211;sen, the founder of modern China.""\n"" ""\n""HKU, as a pre&#8211;eminent international university, seeks to sustain and enhance its excellence as an institution of higher learning through outstanding teaching and world&#8211;class research so as to produce well&#8211;rounded graduates with lifelong abilities to provide leadership within the societies they serve.""\n"" ""\n""HKU has ten faculties, a graduate school and a number of independent centres of studies and learning. In 2016&#8211;17, it had a student population of over 27,800, including over 16,100 undergraduates and 11,700 postgraduates, and an academic staff population of around 3,400. Coupled with an active alumni network and generous endowments for programme research and development, HKU is a dynamic and exciting institution. Stepping into Asia’s next century of phenomenal growth.</string>
    <string name="cyber">Cyber Security</string>
    <string name="multimedia">Multimedia Computing</string>
    <string name="financial">Financial Computing</string>
    <string name="general">General Stream</string>
    <string name="cyber_details">The Cyber Security Stream is a multidisciplinary area of study and professional activity concerned with state&#8211;of&#8211;the&#8211;art technology in cyber security. The curriculum covers different aspects of cyber security from different perspectives, including technical, organisational, human&#8211;oriented and legal.
    </string>
    <string name="multimedia_details">The Multimedia Computing Stream focuses on multimedia computing, communications, analytics, visualisation and applications.""\n""Multimedia Computing encompasses media coding and processing, streaming&#8211;media middleware, media representations, real&#8211;time protocols, media analysis, and human&#8211;interaction and visualisation techniques.""\n""Students are encouraged to develop innovative ideas using the latest development in technology such as mobile devices and big&#8211;data analytics.</string>
    <string name="financial_details">The Financial Computing Stream is the study of data and algorithms used in finance and the mathematics of computer programs that realise financial models or systems.""\n""Financial Computing emphasises practical numerical methods and focuses on techniques that are directly applicable to business and financial analysis.""\n""The emphasis will be in the computing aspect of the financial industry.</string>
    <string name="general_details">The General Stream covers a broad, comprehensive range of Computer Science subjects, including a wide range of courses from which students can choose from. It offers students the most flexibility to design their own study portfolio based on their career aspiration or requirements.</string>
    <string name="news1">Admission 2019""\n""Tuesday, October 16, 2018</string>
    <string name="news2">MSc(CompSc) Welcoming Reception 2018""\n""Sunday, September 2, 2018</string>
    <string name="news3">AHKU CS Career Fair on September 18, 2018""\n""Friday, September 21, 2018</string>
    <string name="news4">HKU CS Career Talk on March 19, 2018""\n""Monday, March 19, 2018</string>
    <string name="n_t1">Admission 2019</string>
    <string name="n_t2">MSc(CompSc) Welcoming Reception</string>
    <string name="n_t3">HKU CS Career Fair</string>
    <string name="n_t4">HKU CS Career Talk</string>
    <string name="n_d1">The MSc(CompSc) admission for 2019 September intake now opens. For details, please refer to the admission section.</string>
    <string name="n_d2">The Welcoming Reception for Cohort 2018 MSc(CompSc) students was held at Wang Gungwu Lecture Theatre on 30 August 2018.""\n""""\n""In additional to greeting by Dr KP Chow, the Programme Director, and Professor TW Lam, the Head of Department, many teachers joined this event and gave a brief introduction of the courses to students.  The Hong Kong Police Force was invited to talk about anti&#8211;deception.""\n""""\n""A group of MSc(CompSc) graduates also joined this welcoming reception and shared their experience with new students.</string>
    <string name="n_d3">The MSc Programme Office organized the Career Fair on 18 September 2018, aiming to provide students and alumni a great opportunity to meet the representatives of companies, learn more about the organization, the positions available and their hiring criteria.  We were honoured to have 8 companies participating in the Career Fair, some of whom also happen to be our alumni.  They gave our students insights of the industry, let them have a better understanding of the opportunities they could grasp and be more prepared. ""\n""""\n""We would like to take this opportunity to thank all the participating companies, as well as student/alumni helpers, for their time and effort, and dedication to our students. ""\n""""\n""Acknowledgement: (in alphabetical order)""\n""&#8211; ASTRI""\n""&#8211; Bank of China""\n""&#8211; BGI""\n""&#8211; China Merchants Bank""\n""&#8211; Deloitte""\n""&#8211; Goldman Sachs""\n""&#8211; Huawei""\n""&#8211; Lenovo HK</string>
    <string name="n_d4">The MSc Programme Office organized a career talk for current CS students on 19 March 2018. It was our pleasure to have the representatives from Meituan&#8211;Dianping, Microsoft Hong Kong Limited and Deloitte, to tell us about their organizations, the positions available and their hiring criteria.""\n""""\n""HKU MSc(CS) Alumni Association also invited alumni from various industries to share their career experience as well as the expertise needed for future jobs.  Students were greatly benefited from the alumni’s sharing on their invaluable working experience and job hunting strategies.</string>
    <string name="event1">Post Exhibition of MSc(CompSc) Dissertations &#8211; Fall 2018 (November 14 &#38; 15)</string>
    <string name="event2">Information Sessions for Admission 2019</string>
    <string name="event3">Post Exhibition of MSc(CompSc) Dissertations &#8211; Summer 2018 (July 5)</string>
    <string name="event4">Post Exhibition of MSc(CompSc) Dissertations &#8211; Spring 2018 (March 27)</string>
    <string name="event5">Post Exhibition of MSc(CompSc) Dissertations &#8211; Spring 2018 (April 6)</string>
    <string name="e_t1">Information Sessions</string>
    <string name="e_t2">Post Exhibition</string>
    <string name="e_t3">Post Exhibition</string>
    <string name="e_t4">Post Exhibition</string>
    <string name="e_t5">Post Exhibition</string>
    <string name="e_d1">Please join our information session on 4 December 2018 and find out if the Master of Science in Computer Science Programme is the right fit for your career goals. The information session will include a presentation on overview of the programme and a Q&#38;A session, plus the opportunity to talk informally with the Programme Director afterwards. All potential applicants are welcome.""\n""""\n""Date:  4 December 2018""\n""""\n""Time:  6:30&#8211;8:00pm""\n""""\n""Venue:  Theatre A, G/F, Chow Yei Ching Building, The University of Hong Kong, Pokfulam Road""\n""""\n""Registration:  https://www.msc&#8211;cs.hku.hk/Admission/Info&#8211;session</string>
    <string name="e_d2">Every semester, a poster exhbition is held to showcase the work of our MSc(CompSc) students on their dissertations.""\n""""\n""The coming exhibition will be held on November 14 &#38; 15, 2018. This exhibition mainly features the work from the students finishing their dissertations in semester 1, 2018&#8211;19.  Students will share their experience on the spot.""\n""""\n""All people are welcome!""\n""""\n""Date:  November 14, 2018""\n""""\n""Session A &#8211; 10:00 &#8211; 13:00""\n""""\n""Session B &#8211; 14:00 &#8211; 17:00""\n""""\n""Venue:  3/F, The Jockey Club Tower, Central Podium Level, HKU Centennial Campus""\n""""\n""Date:  November 15, 2018""\n""""\n""Session C &#8211; 10:00 &#8211; 13:00""\n""""\n""Venue:  3/F, The Jockey Club Tower, Central Podium Level, HKU Centennial Campus</string>
    <string name="e_d3">Every semester, a poster exhbition is held to showcase the work of our MSc(CompSc) students on their dissertations.""\n""""\n""The coming exhibition will be held on July 5, 2018. This exhibition mainly features the work from the students finishing their dissertations in summer semester, 2017&#8211;18.  Students will share their experience on the spot.""\n""""\n""All people are welcome!""\n""""\n""Date:  July 5, 2018""\n""""\n""Session A &#8211; 10:00 &#8211; 13:00""\n""Session B &#8211; 14:00 &#8211; 17:00""\n""""\n""Venue:  G/F, Chow Yei Ching Building, HKU</string>
    <string name="e_d4">Every semester, a poster exhbition is held to showcase the work of our MSc(CompSc) students on their dissertations.""\n""""\n""The coming exhibition will be held on March 27 &#38; April 6, 2018. This exhibition mainly features the work from the students finishing their dissertations in semester 2, 2017&#8211;18.  Students will share their experience on the spot.""\n""""\n""All people are welcome!""\n""""\n""Date:  March 27, 2018""\n""""\n""Session A &#8211; 10:00 &#8211; 13:00""\n""Session B &#8211; 14:00 &#8211; 17:00""\n""""\n""Date:  April 6, 2017""\n""""\n""Session C &#8211; 12:30 &#8211; 15:30""\n""""\n""Venue:  3/F, The Jockey Club Tower, Central Podium Level, HKU Centennial Campus</string>
    <string name="e_d5">Every semester, a poster exhbition is held to showcase the work of our MSc(CompSc) students on their dissertations.""\n""""\n""The coming exhibition will be held on March 27 &#38; April 6, 2018. This exhibition mainly features the work from the students finishing their dissertations in semester 2, 2017&#8211;18.  Students will share their experience on the spot.""\n""""\n""All people are welcome!""\n""""\n""Date:  March 27, 2018""\n""""\n""Session A &#8211; 10:00 &#8211; 13:00""\n""Session B &#8211; 14:00 &#8211; 17:00""\n""""\n""Date:  April 6, 2017""\n""""\n""Session C &#8211; 12:30 &#8211; 15:30""\n""""\n""Venue:  3/F, The Jockey Club Tower, Central Podium Level, HKU Centennial Campus</string>
    <string name="faculty0">  The Department of Computer Science is committed to high-quality education and training of computing professionals at both the undergraduate and postgraduate levels. At the postgraduate level, we offer two taught programmes based on coursework, the MSc(CompSc) and the MSc(ECom&amp;IComp), as well as the research-based MPhil and PhD programmes.</string>
</resources>